Updated code with more analysis

--- a/modelling_v2.ipynb
+++ b/modelling_v2.ipynb
@@ -69,12 +69,12 @@
    "id": "c8be804f",
    "metadata": {},
    "source": [
-    "Firstly, we load the customer churn data. We have 7043 entries with 21 different variables, including customer information (ID, gender, dependents, etc.) as well as information about their subscription (whether they have TV streaming, online security, etc.) and billing (contract type, total and monthly charges, etc.). We also, most importantly, have a variable that tells us whether the customer has churned or not."
+    "Firstly, we load the customer churn data. We have 7043 entries with 21 different variables, including customer information (ID, gender, dependents, etc.) as well as information about their subscription (whether they have TV streaming, online security, etc.) and billing (contract type, total and monthly charges, etc.). We also, most importantly, have a variable that tells us whether the customer has churned or not in the quarter just passed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "4138b116",
    "metadata": {},
    "outputs": [
@@ -1927,6 +1927,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "46a49cdb",
+   "metadata": {},
+   "source": [
+    "We immediately split the data into test, training and validation sets."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "74683d0f",
@@ -1969,6 +1977,14 @@
    ],
    "source": [
     "sns.countplot(x = \"Churn\", hue = \"Churn\", stat = \"percent\", data = train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dab7b91a",
+   "metadata": {},
+   "source": [
+    "We can see a clear class imbalance: Over 70% of the customers churned in the last quarter. We may need to account for this imbalance within our predicitive models."
    ]
   },
   {
@@ -2021,6 +2037,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "08bc4f8f",
+   "metadata": {},
+   "source": [
+    "The above plots show the categorical data with respect to churn. We can use these plots to preliminarily spot potential key determinants in predicting customer churn. For example, customers on month-to-month contracts churned at a much higher rate compared to customers on one and two year contracts. This suggests that contract type may play a large role in whether customers churn or not. This is the same for customers that pay via electronic check, have no tech support and those with no online security."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "13fc2b39",
@@ -2048,6 +2072,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c0448965",
+   "metadata": {},
+   "source": [
+    "Now, looking at numerical features, we can see that the distribution of tenure differs vastly for churned customers. The majority of churned customers had low tenure, whilst the spread of tenure is much more even amongst continuing customers. This suggests that tenure may play a vital role in predicting churn: brand loyalty could be a key heuristic for customers.\n",
+    "\n",
+    "Likewise, the distribution of monthly charges for churned customers is right-skewed, but is left-skewed for continuing customers - customers with higher monthly charged may see this as a reason to churn (potentially due to cheaper services from competitors).\n",
+    "\n",
+    "The distribution for total charges is relatively equal amongst churned and continuing customers, which makes sense: churned customers paid higher monthly charges, but for a shorter amount of time, whilst continuing customers have paid lower prices for longer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d372c00e",
    "metadata": {},
    "source": [
@@ -2056,7 +2092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "08393cd0",
    "metadata": {},
    "outputs": [],
@@ -2065,18 +2101,18 @@
     "y_train = train[\"Churn\"]\n",
     "\n",
     "X_val = val.drop(\"Churn\", axis = 1)\n",
-    "y_val = val[\"Churn\"]    "
+    "y_val = val[\"Churn\"]\n",
+    "\n",
+    "cat_cols = X_train.select_dtypes(include = [\"object\"]).columns.tolist()\n",
+    "num_cols = X_train.select_dtypes(exclude = [\"object\"]).columns.tolist()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "a9a850e0",
+   "cell_type": "markdown",
+   "id": "ed560b8e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "cat_cols = X_train.select_dtypes(include = [\"object\"]).columns.tolist()\n",
-    "num_cols = X_train.select_dtypes(exclude = [\"object\"]).columns.tolist()"
+    "Before modelling, we first separate the dependent variable, churn, from the independent variables, and pick out the categorical and numerical variables for preprocessing."
    ]
   },
   {
@@ -2120,6 +2156,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8cf35999",
+   "metadata": {},
+   "source": [
+    "For the categorical variables, we use one hot encoding. This creates new, numerical columns that can be used in our models. For numerical values, we use MinMax scaling to ensure that all variables have the same scale, again improving model performance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "id": "fc3a9b6e",
@@ -2127,6 +2171,14 @@
    "outputs": [],
    "source": [
     "resampler = SMOTETomek(tomek = TomekLinks(sampling_strategy = \"majority\"), random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84acdc6d",
+   "metadata": {},
+   "source": [
+    "The SMOTETomek resampler removes Tomek Links from the data and then uses oversampling to address the aforementioned class imbalance issue."
    ]
   },
   {
@@ -2139,6 +2191,32 @@
     "le = LabelEncoder()\n",
     "y_train = le.fit_transform(y_train)\n",
     "y_val = le.transform(y_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "931c3d72",
+   "metadata": {},
+   "source": [
+    "Finally, we use a label encoder on the Churn variable for easy use in algorithms."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b7f372c",
+   "metadata": {},
+   "source": [
+    "#### Initial Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8348825a",
+   "metadata": {},
+   "source": [
+    "We initally look at logistic, k-nearest neighbours, random forest, gradient boost, xgboost and lightgbm models to get a general idea of what will perform best in predicting churn.\n",
+    "\n",
+    "For a firm that wishes to capture as many potential churning customers as possible, we seek to minimise the number of cases where our model predicts that a customer will continue but in reality chooses not to. To this end, we want to focus on maximising the f1 score of our model. We would also, of course, like to deploy a model with a sufficient level of accuracy."
    ]
   },
   {
@@ -2397,10 +2475,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ee867c18",
+   "metadata": {},
+   "source": [
+    "Most of the models produce a similar f1 score, apart from k-nn. Gradient boosting models (Gradient Boost,XGBoost, LightGBM) perform best in this case. We can now proceed with model selection, choosing the best, tuned, gradient boosting model to keep and eventually deploy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "085707c0",
    "metadata": {},
    "source": [
     "## Model Tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32a41e17",
+   "metadata": {},
+   "source": [
+    "We use optuna to intellegently find the best model to proceed with. We look to pick one type of gradient boosting model and then choose parameters to maximise f1 score. Namely, we look at max depth, learning rate (eta) and number of estimators for all model types, as well as loss and booster types for specific models."
    ]
   },
   {
@@ -2546,6 +2640,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6d8a70e8",
+   "metadata": {},
+   "source": [
+    "This model produces an f1 score of 78% and a balanced accuracy of 74% when looking at our validation set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6a1bafbe",
    "metadata": {},
    "source": [
@@ -2596,6 +2698,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "58e288c1",
+   "metadata": {},
+   "source": [
+    "Testing this on our test set shows good results: 78% F1 score and 75% accuracy."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "id": "70eceb0c",
@@ -2620,24 +2730,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4fe36f80",
+   "metadata": {},
+   "source": [
+    "Whilst we still do have cases where our model fails to capture customer churn, this is the least populated case within our confusion matrix. More rigourous hyperparameter tuning and testing a wider range of models may help this, but this is at a satisfactory level."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a0b3f1a",
+   "metadata": {},
+   "source": [
+    "## Feature Importance (SHAP)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "8a550a66",
    "metadata": {},
    "outputs": [],
    "source": [
     "final_model_model = final_model.named_steps[\"classifier\"]\n",
     "final_model_pp = final_model.named_steps[\"preprocessor\"]\n",
-    "final_model_rs = final_model.named_steps[\"resampler\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "51d530dd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "final_model_rs = final_model.named_steps[\"resampler\"]\n",
+    "\n",
     "pp_X = final_model_pp.transform(X_test)\n",
     "pp_y = le.fit_transform(y_test)\n",
     "\n",
@@ -2679,6 +2797,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f0107e0b",
+   "metadata": {},
+   "source": [
+    "As we gathered during EDA, contract type and tenure play a large role in determining customer churn, as well as a lack of tech support and online security."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "id": "7ef6fec5",
@@ -2707,6 +2833,21 @@
     "ax.set_title(\"Feature Values - Customer Churn Predictors\")\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7f09364",
+   "metadata": {},
+   "source": [
+    "We can also see exactly which direction each variable pulls predicted churn in. Customers with lower tenures tend to churn, whilst customers with lower monthly charges tend to stay. This again backs up our findings within EDA.\n",
+    "\n",
+    "From our tested model, we can advise the firm on a few things they can do to help minimise churn:\n",
+    "- Offering discounted rates for longer contracts, to address contract type, tenure and monthly charges all at once.\n",
+    "- Offering bundled services, like a package that includes tech support and online security alongside their fiber optic internet service.\n",
+    "- Sending emails to customers paying via electronic check to suggest switching onto a different payment method.\n",
+    "\n",
+    "The firm can also use this predictive model to single out current customers who are most likely to churn. They can then send special offers (that target the key determinants of churn) to those specific customers to keep them on."
    ]
   }
  ],
